<?xml version="1.0" encoding="utf-8"?>
<io.codetail.widget.RevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Main View-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <android.support.v7.widget.CardView
            android:id="@+id/middle_party_card_what"
            style="@style/MiddlePartyCard"
            android:layout_alignParentTop="true">

            <ImageView
                style="@style/MiddlePartyBackground"
                android:background="@color/middle_party_what"
                android:id="@+id/middle_party_card_img_what"/>

            <TextView
                style="@style/MiddlePartyTitle"
                android:text="@string/middle_party_what" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/middle_party_card_why"
            style="@style/MiddlePartyCard"
            android:layout_below="@+id/middle_party_card_what">

            <ImageView
                style="@style/MiddlePartyBackground"
                android:background="@color/middle_party_why"
                android:id="@+id/middle_party_card_img_why"/>

            <TextView
                style="@style/MiddlePartyTitle"
                android:text="@string/middle_party_why" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/middle_party_card_where"
            style="@style/MiddlePartyCard"
            android:layout_below="@+id/middle_party_card_why">

            <ImageView
                style="@style/MiddlePartyBackground"
                android:background="@color/middle_party_where"
                android:id="@+id/middle_party_card_img_where"/>

            <TextView
                style="@style/MiddlePartyTitle"
                android:text="@string/middle_party_where" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/middle_party_card_when"
            style="@style/MiddlePartyCard"
            android:layout_below="@id/middle_party_card_where">

            <ImageView
                style="@style/MiddlePartyBackground"
                android:background="@color/middle_party_when"
                android:id="@+id/middle_party_card_img_when"/>

            <TextView
                style="@style/MiddlePartyTitle"
                android:text="@string/middle_party_when" />

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <!--Where Revealed-->
    <FrameLayout
        android:id="@+id/middle_party_where_fullscreen"
        style="@style/MiddlePartyFullscreen">

        <ImageView
            style="@style/MiddlePartyBackground"
            android:background="@color/middle_party_where"
            android:id="@+id/middle_party_fullscreen_img_where"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/MiddlePartyTitle"
                android:layout_margin="16dp"
                android:text="@string/middle_party_where"
                android:textAlignment="center" />

            <android.support.v7.widget.CardView style="@style/MiddlePartyFullscreenCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="32dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:alpha="0.5"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:background="@drawable/DialogBackground"
                            android:paddingBottom="4dp"
                            android:text="@string/middle_party_where_name"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="26sp"
                            android:textStyle="bold" />

                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:drawableLeft="@drawable/ic_pin_drop_black_24dp"
                        android:text="@string/middle_party_where_address"
                        android:textColor="@color/text_200"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/middle_party_where_directions"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:src="@drawable/google_maps" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/middle_party_where_close"
                        style="@style/MiddlePartyCloseButton" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </FrameLayout>

    <!--When Revealed-->
    <FrameLayout
        android:id="@+id/middle_party_when_fullscreen"
        style="@style/MiddlePartyFullscreen">

        <ImageView
            style="@style/MiddlePartyBackground"
            android:background="@color/middle_party_when"
            android:id="@+id/middle_party_fullscreen_img_when"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/MiddlePartyTitle"
                android:layout_margin="16dp"
                android:text="@string/middle_party_when"
                android:textAlignment="center" />

            <android.support.v7.widget.CardView style="@style/MiddlePartyFullscreenCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/middle_party_date"
                        android:textColor="@color/text_200"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-thin"
                            android:paddingLeft="4dp"
                            android:text="@string/middle_party_start"
                            android:textAllCaps="true"
                            android:textColor="@color/text_150"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/middle_party_start_hour"
                            android:textColor="@color/text_200"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-thin"
                            android:text="@string/middle_party_end"
                            android:textAllCaps="true"
                            android:textColor="@color/text_150"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="@string/middle_party_end_hour"
                            android:textColor="@color/text_200"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/middle_party_when_close"
                        style="@style/MiddlePartyCloseButton" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </FrameLayout>

    <!--Why Revealed-->
    <FrameLayout
        android:id="@+id/middle_party_why_fullscreen"
        style="@style/MiddlePartyFullscreen">

        <ImageView
            style="@style/MiddlePartyBackground"
            android:background="@color/middle_party_why"
            android:id="@+id/middle_party_fullscreen_img_why"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/MiddlePartyTitle"
                android:layout_margin="16dp"
                android:text="@string/middle_party_why"
                android:textAlignment="center" />

            <android.support.v7.widget.CardView style="@style/MiddlePartyFullscreenCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MiddlePartyDetails"
                        android:text="@string/middle_party_why_details" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/middle_party_why_close"
                        style="@style/MiddlePartyCloseButton" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </FrameLayout>

    <!--What Revealed-->
    <FrameLayout
        android:id="@+id/middle_party_what_fullscreen"
        style="@style/MiddlePartyFullscreen">

        <ImageView
            style="@style/MiddlePartyBackground"
            android:background="@color/middle_party_what"
            android:id="@+id/middle_party_fullscreen_img_what"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/MiddlePartyTitle"
                android:layout_margin="16dp"
                android:text="@string/middle_party_what"
                android:textAlignment="center" />

            <android.support.v7.widget.CardView style="@style/MiddlePartyFullscreenCard">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MiddlePartyDetails"
                        android:text="@string/middle_party_what_details" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/global_logic" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/middle_party_what_close"
                        style="@style/MiddlePartyCloseButton" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

    </FrameLayout>

</io.codetail.widget.RevealFrameLayout>