<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.v7.widget.CardView
        android:uID="@+uID/about_card_what"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:elevation="4dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/AboutImg"
                android:src="@drawable/what_is_it" />

            <TextView
                style="@style/AboutTitle"
                android:text="@string/about_what" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:uID="@+uID/about_card_looks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:elevation="4dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/AboutImg"
                android:src="@drawable/how_it_looks" />

            <TextView
                style="@style/AboutTitle"
                android:text="@string/about_looks" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:uID="@+uID/about_card_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:elevation="4dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/AboutImg"
                android:src="@drawable/target" />

            <TextView
                style="@style/AboutTitle"
                android:text="@string/about_target" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:uID="@+uID/about_card_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:elevation="4dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/AboutImg"
                android:src="@drawable/ic_mail_outline_black_72dp" />

            <TextView
                style="@style/AboutTitle"
                android:text="@string/about_questions" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>