<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/dialog_speaker_outside"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="42dp">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="4dp">

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/speaker_card_picture_size"
                android:layout_height="@dimen/speaker_card_picture_size"
                app:cardCornerRadius="20dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/unknown"/>
            </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:layout_marginLeft="8dp"
                    android:text="@string/placeholder_speaker_name"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/session_light"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <include layout="@layout/divider"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_scroll_height"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/placeholder_lecture_description"
                android:textColor="@color/text_150"
                android:textSize="14sp" />
            </ScrollView>

            <include layout="@layout/divider"/>

            <android.support.v7.widget.CardView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lines="2"
                        android:text="@string/placeholder_lecture_title"
                        android:textColor="@color/text_200"
                        android:textSize="12sp"
                        />
                    
                    <include layout="@layout/divider" />
                    
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/session_light"
                        android:text="Sobota 10:00"
                        android:textAlignment="textEnd"/>
                    


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>

